<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchjokes.presentation.SearchJokesActivity">

    <mobi.pulsus.challenge.commons.customviews.toolbars.GenericToolbar
        android:id="@+id/gt_search_jokes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:buttonLeftTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showLeftButton="true"
        app:showRightButton="false"
        app:toolbarText="@string/search_jokes_by_text"
        app:toolbarTextColor="@color/orange" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search_box"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/search_keyword"
        app:boxStrokeColor="@color/box_stroke_color"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gt_search_jokes"
        app:startIconDrawable="@drawable/ic_outline_search"
        app:startIconTint="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_search_jokes_start_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_search_jokes_start_instructions, iv_search_jokes_start_instructions_image" />

    <ImageView
        android:id="@+id/iv_search_jokes_start_instructions_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_outline_search"
        app:layout_constraintBottom_toTopOf="@+id/tv_search_jokes_start_instructions"
        app:layout_constraintEnd_toEndOf="@+id/tv_search_jokes_start_instructions"
        app:layout_constraintStart_toStartOf="@+id/tv_search_jokes_start_instructions" />

    <TextView
        android:id="@+id/tv_search_jokes_start_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin_horizontal"
        android:layout_marginEnd="@dimen/screen_margin_horizontal"
        android:gravity="center"
        android:text="Start typing to see the results here"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search_box" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_jokes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search_box"
        app:layout_constraintVertical_bias="0"
        tools:listitem="@layout/item_joke" />

    <ProgressBar
        android:id="@+id/pb_search_jokes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_search_jokes_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin_horizontal"
        android:layout_marginEnd="@dimen/screen_margin_horizontal"
        android:gravity="center"
        android:text="@string/an_error_occurred_try_again_later"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search_box"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>